# Embedded_Linux

./: README.md
Bash/01/: readme.md
Bash/03/: colors.sh  start-stop-daemon.md  trap and xdotool.md
Bash/systemd/: DeepDive.md
Linux/01/: Boot Sequence .md  task.md
Linux/02/: PLT_GOT IN DynamicLinking.md  filesystem.md
Linux/02/SharedLib/app/: CMakeLists.txt  main.cpp
Linux/03/: IPC.md  fifio,pipe,poll.md
Linux/04/: Tasks.md  networking commands.md
Rasp/01/: Raspberry Pi Network Debugging Log.md  Raspberry Pi PWM Configuration and Control Guide.md  led.c  led.py  led_pwm.py  systemd service hello gui.md  vnc
Rasp/02/:  Protocol Configuration.md  Arduino_Rasp_connection_TASK.md  Decive_Tree.md  Protocols.md  spi_logicAnalize Task.md  tasks.md  uart_usb_TTL Task.md
Rasp/03/: DTO_DTS_Bringup_diff.md  rpi-led-dt-bringup.md  rpi-led-dt-overlay_bringup.md
cpp/01/: DecToBin.cpp  RightAngleTri.cpp  TableforAscii.cpp  a.out  maxNum.cpp  mulTable.cpp  sumDigofint.cpp  vowel.cpp
cpp/02/: AddressBook.cpp  Array.cpp  Lambda_square.cpp  Null_Vs_nullptr.md  sorting.cpp
cpp/03/: 4try.cpp  AccumulateofArr.cpp  AllArr_iseven.cpp  Backtrace.cpp  ExternalVsInlineFunc.md  Initialization.md  IsAnyEven.cpp  a.out  fillArr.cpp  interruptSignal.cpp  isdigit.cpp  staticVar.cpp  stringclass.cpp
cpp/04/: Explicit VS implicit constructor call.md  RULES 5,3,0.md  Sanitizers.md  behindsceneinFunctionOverloading.md  operator_overloading.md
cpp/05/: DynamicCasting.md  Vtable.md  containerAdaptersq.md  getline.md  interfaceVSabstract class.md  pushback vs emplaceback.md
(+100 files in other folders)
